api/openshift/seed.pod.yaml
kind: Template
apiVersion: template.openshift.io/v1
metadata:
  name: seed
  creationTimestamp: null
parameters:
- name: IMAGE
  description: 'Image for pod'
  required: true
- name: NAME
  value: invasivesbc-api
- name: SUFFIX
  value: "-dev"
- name: VERSION
  description: Version of the application
  value: "1.0.0"
- name: CHANGE_ID
  description: Change id of the project. This will help to pull image stream
  required: true
  value: "0"
- name: DB_SERVICE_NAME
  description: 'Database service name associated  with deployment'
  required: true
- name: ENVIRONMENT
  description: Application Environment type variable
  required: true
  value: 'dev'
- name: CERTIFICATE_URL
  description: Authentication certificate urls
  required: true
  value: "https://loginproxy.gov.bc.ca/auth/realms/standard/protocol/openid-connect/certs"
- name: CPU_REQ
  value: '500m'
- name: CPU_LIMIT
  value: '750m'
- name: MEMORY_REQ
  value: '1Gi'
- name: MEMORY_LIMIT
  value: '2Gi'
- name: REPLICAS
  value: '1'
- name: APP_PORT_DEFAULT
  value: '3001-tcp'
- name: APP_PORT_OTHER
  value: '8080-tcp'
- name: PORT
  value: '3001'
objects:
- kind: Pod
  apiVersion: v1
  metadata:
    name: "${NAME}"
    creationTimestamp: 
    labels: {}
  spec:
    containers:
    - name: test
      image: "${IMAGE}"
      command:
      - container-entrypoint
      - bash
      - "-c"
      - "npm run seed-db"
      resources:
        limits:
          cpu: '1'
          memory: 1.5Gi
        requests:
          cpu: 500m
          memory: 512Mi
      imagePullPolicy: Always
    restartPolicy: Never
    activeDeadlineSeconds: 900
    dnsPolicy: ClusterFirst
