api/openshift/db.dc.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: postgresql-persistent-template
metadata:
  creationTimestamp: null
  name: postgresql-dc
parameters:
- description: The name of the OpenShift Service exposed for the database.
  displayName: Database Service Name
  name: NAME
  required: true
  value: "postgresql"
- description: The OpenShift ImageStream name.
  displayName: IMAGE_STREAM_NAME
  name: IMAGE_STREAM_NAME
  value: "postgresql"
- description: The OpenShift Namespace where the ImageStream resides.
  displayName: Namespace
  name: IMAGE_STREAM_NAMESPACE
  value: "openshift"
- description: The name of the OpenShift Service exposed for the database.
  displayName: Database Service Name
  name: DATABASE_SERVICE_NAME
  required: true
  value: "postgresql"
- description: Username for PostgreSQL user that will be used for accessing the database.
  displayName: PostgreSQL Connection Username
  name: POSTGRESQL_USER
  required: true
  value: "mds"
- description: Admin Username for PostgreSQL user that will be used for accessing
    the database.
  displayName: PostgreSQL Admin Connection Username
  name: POSTGRESQL_ADMIN_USER
  required: true
  value: "postgres"
- description: Password for the PostgreSQL connection user.
  displayName: PostgreSQL Connection Password
  from: "[a-zA-Z0-9]{16}"
  generate: expression
  name: POSTGRESQL_PASSWORD
  required: true
- description: Password for the PostgreSQL admin user.
  displayName: PostgreSQL Admin Connection Password
  from: "[a-zA-Z0-9]{16}"
  generate: expression
  name: POSTGRESQL_ADMIN_PASSWORD
  required: true
- description: Oracle FDW name
  name: FDW_NAME
  value: ""
- description: Oracle FDW remote schema name
  name: FDW_FOREIGN_SCHEMA
  value: ""
- description: Oracle FDW remote server name
  name: FDW_FOREIGN_SERVER
  value: ""
- description: Oracle FDW user
  name: FDW_USER
  value: ""
- description: Oracle FDW pass
  name: FDW_PASS
  value: ""
- description: Oracle FDW postgres schema
  name: FDW_SCHEMA
  value: ""
- description: Name of the PostgreSQL database accessed.
  displayName: PostgreSQL Database Name
  name: POSTGRESQL_DATABASE
  required: true
  value: "sampledb"
- description: Volume space available for data, e.g. 512Mi, 2Gi.
  displayName: Volume Capacity
  name: VOLUME_CAPACITY
  required: true
  value: "3Gi"
- description: Version of PostgreSQL image to be used (9.2, 9.4, 9.5 or latest).
  displayName: Version of PostgreSQL Image
  name: IMAGE_STREAM_VERSION
  required: true
  value: '9.5'
- description: Indicator to enable pgcrypto extension (provided out-of-the-box with
    PostgreSQL).
  displayName: Flag to enable pgcrypto PostgreSQL extension.
  name: PGCRYPTO_EXTENSION
  value: "Y"
- description: Indicator to enable postgis extension (from official PostgeSQL YUM
    repo).
  displayName: Flag to enable postgis PostgreSQL extension.
  name: POSTGIS_EXTENSION
  value: "Y"
- name: CPU_LIMIT
  value: "500m"
- name: MEMORY_LIMIT
  value: "2Gi"
- name: CPU_REQUEST
  value: "200m"
- name: MEMORY_REQUEST
  value: "1.5Gi"
objects:
- apiVersion: v1
  kind: Secret
  metadata:
    name: "${DATABASE_SERVICE_NAME}"
  stringData:
    database-name: "${POSTGRESQL_DATABASE}"
    database-password: "${POSTGRESQL_PASSWORD}"
    database-admin-password: "${POSTGRESQL_ADMIN_PASSWORD}"
    database-user: ""
    oracle-fdw-name: ""
    oracle-fdw-foreign-schema: ""
    oracle-fdw-foreign-server: ""
    oracle-fdw-user: ""
    oracle-fdw-password: "" 
    oracle-fdw-schema:  ""
- apiVersion: v1
  kind: Service
  metadata:
    name: "${DATABASE_SERVICE_NAME}"
  spec:
    ports:
    - name: postgresql
      nodePort: 0
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      name: "${DATABASE_SERVICE_NAME}"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: "${DATABASE_SERVICE_NAME}"
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: "${VOLUME_CAPACITY}"
- kind: ImageStream
  apiVersion: v1
  metadata:
    name: "${IMAGE_STREAM_NAME}"
    creationTimestamp: 
    labels:
      shared: 'true'
    annotations: {}
  spec:
    lookupPolicy:
      local: false
- kind: Deployment
  apiVersion: v1
  metadata:
    name: "${DATABASE_SERVICE_NAME}"
  spec:
    replicas: 1
    selector:
      name: "${DATABASE_SERVICE_NAME}"
    strategy:
      type: Recreate
      maxSurge: 50%
      maxUnavailable: 0
    template:
      metadata:
        labels:
          name: "${DATABASE_SERVICE_NAME}"
      spec:
        containers:
        - capabilities: {}
          image: " "
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - "/bin/sh"
              - "-i"
              - "-c"
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "${CPU_REQUEST}"
              memory: "${MEMORY_REQUEST}"
            limits:
              cpu: "${CPU_LIMIT}"
              memory: "${MEMORY_LIMIT}"
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: "/dev/termination-log"
          volumeMounts:
          - mountPath: "/var/lib/pgsql/data"
            name: "${DATABASE_SERVICE_NAME}-data"
          - mountPath: "/var/run/postgresql"
            name: "${DATABASE_SERVICE_NAME}-run"
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        volumes:
        - name: "${DATABASE_SERVICE_NAME}-data"
          persistentVolumeClaim:
            claimName: "${DATABASE_SERVICE_NAME}"
        - name: "${DATABASE_SERVICE_NAME}-run"
          emptyDir: {}
