api/openshift/route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: lucy-api-test
    name: lucy-api-test
    selfLink: /api/v1/namespaces/7068ad-dev/services/lucy-api-test
  spec:
    ports:
    - name: 3001-tcp
      port: 3001
      protocol: TCP
      targetPort: 3001
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      matchLabels:
        deployment: lucy-api-test
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: lucy-api-test
    name: lucy-api-test-route
    selfLink: /apis/route.openshift.io/v1/namespaces/7068ad-dev/routes/lucy-api-test-route
  spec:
    host: lucy-api-test-route-7068ad-dev.apps.silver.devops.gov.bc.ca
    port:
      targetPort: 3001-tcp
    to:
      kind: Service
      name: lucy-api-test
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
